--- a/style.css
+++ b/style.css
@@ -9,6 +9,24 @@
   margin: 0 auto;
 }
 
+/* Button */
+
+.btn-clear {
+  text-decoration: none;
+  background: #ffffff;
+  border: 1px solid #8053ff;
+  border-radius: 8px;
+  padding: 12px 24px;
+}
+
+.btn-primary {
+  text-decoration: none;
+  color: #fff;
+  background: #8053ff;
+  border-radius: 8px;
+  padding: 12px 24px;
+}
+
 /* Header section */
 
 header {
@@ -27,14 +45,6 @@ nav {
   gap: 60px;
   justify-content: center;
   align-items: center;
-}
-
-.btn-primary {
-  text-decoration: none;
-  color: #fff;
-  background: #8053ff;
-  border-radius: 8px;
-  padding: 12px 24px;
 }
 
 nav ul {
@@ -56,4 +66,31 @@ ul li a {
   background-size: cover;
   height: 800px;
   background-repeat: no-repeat;
+  border-radius: 24px;
+  margin: 3rem 0;
+}
+
+.hero_content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 800px;
+}
+
+.hero_content h1 {
+  font-size: 5rem;
+  margin-bottom: 1rem;
+  color: #23155b;
+}
+
+.hero_content p {
+  margin-bottom: 2rem;
+  font-size: 2rem;
+  color: #23155b;
+}
+
+.hero_content .hero_sec_btn {
+  display: flex;
+  gap: 1rem;
 }
